--- a/trunk/.settings/org.eclipse.jdt.ui.prefs
+++ b/trunk/.settings/org.eclipse.jdt.ui.prefs
@@ -1,3 +1,4 @@
-#Thu Aug 16 14:54:38 CEST 2007
+#Sun Nov 11 16:22:26 CET 2007
 eclipse.preferences.version=1
 internal.default.compliance=user
+org.eclipse.jdt.ui.text.custom_code_templates=<?xml version\="1.0" encoding\="UTF-8"?><templates/>
