--- a/trunk/.settings/org.eclipse.jdt.ui.prefs
+++ b/trunk/.settings/org.eclipse.jdt.ui.prefs
@@ -1,4 +1,3 @@
-#Sun Nov 11 16:22:26 CET 2007
+#Tue Mar 18 17:44:13 VET 2008
 eclipse.preferences.version=1
-internal.default.compliance=user
 org.eclipse.jdt.ui.text.custom_code_templates=<?xml version\="1.0" encoding\="UTF-8"?><templates/>
