implementing feature 1802954 (logarithmic waveform view). updated shortcuts help file. warning: there seems to be a problem with Server -> sendMsgSync, sometimes we get OSC timeouts, probably a new synchronization bug?
git-svn-id: file:///tmp/Eisenkraut@51 72d441a5-a63e-0410-b92d-a332b6c80bf9

--- a/trunk/resources/EisenkrautStrings.properties
+++ b/trunk/resources/EisenkrautStrings.properties
@@ -37,6 +37,9 @@ menuInsertionFollowsPlay=Timeline Insertion follows Playback
 menuTimeUnits=Time Units
 menuTimeUnitsSamples=Sample Frames
 menuTimeUnitsMinSecs=Min:Sec.Millis
+menuAmpScale=Amplitude Scale
+menuAmpScaleLin=Linear (%)
+menuAmpScaleLog=Logarithmic (dB)
 menuViewNullLinie=Null Line
 menuViewVerticalRulers=Vertical Rulers
 menuViewChanMeters=Channel Meters
