continuing sonagramme integration
git-svn-id: file:///tmp/Eisenkraut@57 72d441a5-a63e-0410-b92d-a332b6c80bf9

--- a/trunk/resources/EisenkrautStrings.properties
+++ b/trunk/resources/EisenkrautStrings.properties
@@ -37,9 +37,10 @@ menuInsertionFollowsPlay=Timeline Insertion follows Playback
 menuTimeUnits=Time Units
 menuTimeUnitsSamples=Sample Frames
 menuTimeUnitsMinSecs=Min:Sec.Millis
-menuAmpScale=Amplitude Scale
-menuAmpScaleLin=Linear (%)
-menuAmpScaleLog=Logarithmic (dB)
+menuVertScale=Vertical Scale
+menuVertScaleAmpLin=Amplitude Linear (%)
+menuVertScaleAmpLog=Amplitude Logarithmic (dB)
+menuVertScaleFreqSpect=Frequency Spectrum (Hz)
 menuViewNullLinie=Null Line
 menuViewVerticalRulers=Vertical Rulers
 menuViewChanMeters=Channel Meters
@@ -142,6 +143,8 @@ prefsAdvanced=Advanced
 prefsAudioBusses=Maximum Audio Busses:
 prefsSCBlockSize=Audio Block Size:
 prefsSCMemSize=Realtime Memory [MB]:
+prefsView=View
+prefsSonaSettings=Default Sonagram Analysis
 editChangeTrackStructure=Change Track Structure
 editSetTimelineLength=Set Timeline Length
 editSetTimelinePosition=Set Timeline Position
@@ -233,6 +236,11 @@ labelComment=Comment:
 labelUntitled=Untitled
 labelAudioIFs=Audio Interfaces:
 labelAssistent=Assistent...
+labelMinFreq=Lowest Frequency:
+labelMaxFreq=Highest Frequency:
+labelBandsPerOct=Bands per Octave:
+labelMaxTimeRes=Max. Time Resolution:
+labelMaxFFTSize=Max. FFT Size:
 formatMaxColl=Max Collection
 ptrnServerStatus1=Server : {0,number,######} Hz  {1,number,###} % CPU 
 ptrnServerStatus2= {0,number,####} UGens  {1,number,####} Synths  {2,number,####} Groups  {3,number,####} Defs
