--- a/trunk/resources/EisenkrautStrings.properties
+++ b/trunk/resources/EisenkrautStrings.properties
@@ -143,6 +143,7 @@ prefsAdvanced=Advanced
 prefsAudioBusses=Maximum Audio Busses:
 prefsSCBlockSize=Audio Block Size:
 prefsSCMemSize=Realtime Memory [MB]:
+prefsSCRendezvous=Publish to Rendezvous:
 prefsView=View
 prefsSonaSettings=Default Sonagram Analysis
 editChangeTrackStructure=Change Track Structure
