removed compiler dependancies on SwingOSC ; this makes sense as anyway you will need to install the SwingOSC SuperCollider classes which are currently not included. Reverting back to a (fixed) reflection version. fixed bug 1959773
git-svn-id: file:///tmp/Eisenkraut@87 72d441a5-a63e-0410-b92d-a332b6c80bf9

--- a/trunk/resources/EisenkrautStrings.properties
+++ b/trunk/resources/EisenkrautStrings.properties
@@ -117,10 +117,6 @@ prefsCache=Cache Waveform Overview:
 prefsCacheActive=Active
 prefsCacheCapacity=Capacity:
 prefsCacheFolder=Cache Folder:
-prefsOSCServer=OSC Server:
-prefsOSCActive=Active
-prefsOSCProtocol=Protocol:
-prefsOSCPort=Port:
 prefsRecallFrames=Recall Windows from Session
 prefsLookAndFeel=Look-and-Feel:
 prefsLAFDecoration=Look-and-Feel Window Decoration
@@ -144,6 +140,12 @@ prefsAudioBusses=Maximum Audio Busses:
 prefsSCBlockSize=Audio Block Size:
 prefsSCMemSize=Realtime Memory [MB]:
 prefsSCRendezvous=Publish to Rendezvous:
+prefsOSC=OSC
+prefsOSCServer=OSC Server:
+prefsOSCActive=Active
+prefsOSCProtocol=Protocol:
+prefsOSCPort=Port:
+prefsOSCSwingApp=SwingOSC Server (SwingOSC.jar):
 prefsView=View
 prefsSonaSettings=Default Sonagram Analysis
 editChangeTrackStructure=Change Track Structure
