--- a/trunk/build.xml
+++ b/trunk/build.xml
@@ -11,7 +11,7 @@
 	<property name="resources.dir"	value="resources"/>
 	<property name="main-class"		value="de.sciss.eisenkraut.Main"/>
 	<property name="lib.dir"		value="libraries"/>
-	<property name="libraries"		value="${lib.dir}/JCollider.jar:${lib.dir}/MRJAdapter.jar:${lib.dir}/NetUtil.jar:${lib.dir}/Normalizer.jar:${lib.dir}/SwingOSC.jar"/>
+	<property name="libraries"		value="${lib.dir}/JCollider.jar:${lib.dir}/MRJAdapter.jar:${lib.dir}/NetUtil.jar:${lib.dir}/Normalizer.jar"/>
 	<property name="version"		value="0.70unstable"/>
 	<property name="debug"			value="true"/>
 
@@ -32,7 +32,7 @@
 			<manifest>
 				<attribute name="Main-Class" value="${main-class}" />
 				<!-- <attribute name="Class-Path" value="${libraries}" /> -->
-				<!-- <attribute name="Class-Path" value="libraries/MRJAdapter.jar libraries/JCollider.jar libraries/NetUtil.jar libraries/SwingOSC.jar libraries/Normalizer.jar"/> -->
+				<!-- <attribute name="Class-Path" value="libraries/MRJAdapter.jar libraries/JCollider.jar libraries/NetUtil.jar libraries/Normalizer.jar"/> -->
 			</manifest>
 		</jar>
 		<jar destfile="${jar.dir}/${ant.project.name}.jar" basedir="${resources.dir}" update="true"/>
