fixing filter tests (GVerb and MagBelow), properly pasting back the processed NRT output using new "replace" OSC command. fixing missing FileNetAddr class by supplying it as EisKNRTFile.
git-svn-id: file:///tmp/Eisenkraut@91 72d441a5-a63e-0410-b92d-a332b6c80bf9

--- a/trunk/resources/EisenkrautStrings.properties
+++ b/trunk/resources/EisenkrautStrings.properties
@@ -74,6 +74,7 @@ plugInReverse=Reverse
 plugInRotateChannels=Rotate Channels
 plugInChanShift=Channel Shift
 plugInSilence=Silence
+plugInReplace=Replace
 frameMain=Main
 frameUntitled=Untitled
 framePrefs=Preferences
