--- a/trunk/Eisenkraut.app/Contents/Info.plist
+++ b/trunk/Eisenkraut.app/Contents/Info.plist
@@ -106,7 +106,7 @@
 	<key>CFBundleExecutable</key>
 	<string>Eisenkraut</string>
 	<key>CFBundleGetInfoString</key>
-	<string>Eisenkraut 0.70beta. Copyright © 2004-2007 by Hanns Holger Rutz. All rights reserved.</string>
+	<string>Eisenkraut 0.70. Copyright © 2004-2008 by Hanns Holger Rutz. All rights reserved.</string>
 	<key>CFBundleIconFile</key>
 	<string>application.icns</string>
 	<key>CFBundleIdentifier</key>
@@ -128,11 +128,6 @@
 		<key>ClassPath</key>
 		<array>
 			<string>$JAVAROOT/Eisenkraut.jar</string>
-			<string>libraries/MRJAdapter.jar</string>
-			<string>libraries/JCollider.jar</string>
-			<string>libraries/Normalizer.jar</string>
-			<string>libraries/NetUtil.jar</string>
-			<string>libraries/SwingOSC.jar</string>
 		</array>
 		<key>JVMVersion</key>
 		<string>1.4+</string>
