removing .bat and .sh launcher files (now you just double-click on the .jar which is placed in the main folder). removing images folder.
git-svn-id: file:///tmp/Eisenkraut@101 72d441a5-a63e-0410-b92d-a332b6c80bf9

--- a/trunk/build.xml
+++ b/trunk/build.xml
@@ -7,7 +7,8 @@
 	<property name="build.dir"		value="build"/>
 	<property name="dist.dir"		value="dist"/>
 	<property name="classes.dir"	value="${build.dir}/classes"/>
-	<property name="jar.dir"		value="${build.dir}"/>
+<!-- <property name="jar.dir"		value="${build.dir}"/> -->
+	<property name="jar.dir"		value="."/>
 	<property name="resources.dir"	value="resources"/>
 	<property name="main-class"		value="de.sciss.eisenkraut.Main"/>
 	<property name="lib.dir"		value="libraries"/>
