--- a/trunk/build.xml
+++ b/trunk/build.xml
@@ -8,7 +8,7 @@
 	<property name="dist.dir"		value="dist"/>
 	<property name="classes.dir"	value="${build.dir}/classes"/>
 <!-- <property name="jar.dir"		value="${build.dir}"/> -->
-	<property name="jar.dir"		value="."/>
+	<property name="jar.file"		value="${ant.project.name}.jar"/>
 	<property name="resources.dir"	value="resources"/>
 	<property name="main-class"		value="de.sciss.eisenkraut.Main"/>
 	<property name="lib.dir"		value="libraries"/>
@@ -28,26 +28,26 @@
 		<javac debug="${debug}" srcdir="${src.dir}" destdir="${classes.dir}" classpath="${libraries}" source="1.4" target="1.4"/>
 	</target>
 	<target name="jar" depends="compile">
-		<mkdir dir="${jar.dir}" />
-		<jar destfile="${jar.dir}/${ant.project.name}.jar" basedir="${classes.dir}">
+<!--		<mkdir dir="${jar.dir}" /> -->
+		<jar destfile="${jar.file}" basedir="${classes.dir}">
 			<manifest>
 				<attribute name="Main-Class" value="${main-class}" />
 			</manifest>
 		</jar>
-		<jar destfile="${jar.dir}/${ant.project.name}.jar" basedir="${resources.dir}" update="true"/>
+		<jar destfile="${jar.file}" basedir="${resources.dir}" update="true"/>
 		<unjar dest="${lib.dir}">
 			<fileset dir="${lib.dir}">
 				<include name="*.jar" />
 			</fileset>
 		</unjar>
-		<jar destfile="${jar.dir}/${ant.project.name}.jar" basedir="${lib.dir}" excludes="*.jar" update="true" />
+		<jar destfile="${jar.file}" basedir="${lib.dir}" excludes="*.jar" update="true" />
 		<delete includeemptydirs="true">
 			<fileset dir="${lib.dir}" excludes="*.jar" />
 		</delete>
 	</target>
 	<target name="main" depends="clean,compile" />
 	<target name="osx-app" depends="jar">
-		<copy file="${jar.dir}/${ant.project.name}.jar" todir="${ant.project.name}.app/Contents/Resources/Java" />
+		<copy file="${jar.file}" todir="${ant.project.name}.app/Contents/Resources/Java" />
 		<touch>
 			<fileset dir="${ant.project.name}.app" />
 		</touch>
@@ -57,10 +57,31 @@
 		<dirname property="parent.dir" file="${basedir}"/>
 		<basename property="folder.name" file="${basedir}"/>
 		<mkdir dir="${dist.dir}"/>
-		<!-- tricky shit to preserve executable attribute of bash script and mac os x executable -->
-		<zip destfile="${dist.dir}/${ant.project.name}-${version}.zip">
-			<zipfileset dir="${parent.dir}" includes="${folder.name}/**" excludes="${folder.name}/${classes.dir}/**, ${folder.name}/${dist.dir}, **/.DS_Store, ${folder.name}/${ant.project.name}.sh, ${folder.name}/${ant.project.name}.app/Contents/MacOS/${ant.project.name}"/>
-			<zipfileset dir="${parent.dir}" includes="${folder.name}/${ant.project.name}.sh, ${folder.name}/${ant.project.name}.app/Contents/MacOS/${ant.project.name}" filemode="775"/>
+		
+		<!-- SOURCE VERSION -->
+		<!-- tricky shit to preserve executable attribute of mac os x executable -->
+		<zip destfile="${dist.dir}/${ant.project.name}-src-${version}.zip">
+			<zipfileset dir="${parent.dir}" includes="${folder.name}/**" excludes="${folder.name}/${classes.dir}/**, ${folder.name}/${dist.dir}, **/.DS_Store, ${folder.name}/${ant.project.name}.app/Contents/MacOS/${ant.project.name}"/>
+			<zipfileset dir="${parent.dir}" includes="${folder.name}/${ant.project.name}.app/Contents/MacOS/${ant.project.name}" filemode="775"/>
 		</zip>
+<!--		<tar destfile="${dist.dir}/${ant.project.name}-src-${version}.tar.gz">
+			<tarfileset dir="${parent.dir}" includes="${folder.name}/**" excludes="${folder.name}/${classes.dir}/**, ${folder.name}/${dist.dir}, **/.DS_Store"/>
+		</tar> -->
+
+		<!-- BINARY MAC VERSION -->
+		<zip destfile="${dist.dir}/${ant.project.name}-mac-${version}.zip">
+			<zipfileset dir="${parent.dir}" includes="${folder.name}/${ant.project.name}.app/**, ${folder.name}/help/**, ${folder.name}/licenses/**, ${folder.name}/readme.html, ${folder.name}/SuperCollider/**"/>
+		</zip>
+
+		<!-- BINARY WINDOWS VERSION -->
+		<zip destfile="${dist.dir}/${ant.project.name}-win-${version}.zip">
+			<zipfileset dir="${parent.dir}" includes="${folder.name}/${jar.file}, ${folder.name}/help/**, ${folder.name}/licenses/**, ${folder.name}/readme.html, ${folder.name}/SuperCollider/**"/>
+		</zip>
+
+		<!-- BINARY LINUX VERSION -->
+		<!-- same as windows but use tar/gzip -->
+		<tar destfile="${dist.dir}/${ant.project.name}-linux-${version}.tar.gz" compression="gzip">
+			<tarfileset dir="${parent.dir}" includes="${folder.name}/${jar.file}, ${folder.name}/help/**, ${folder.name}/licenses/**, ${folder.name}/readme.html, ${folder.name}/SuperCollider/**"/>
+		</tar>
 	</target>
 </project>
