fixing executable mode for mac installer
git-svn-id: file:///tmp/Eisenkraut@103 72d441a5-a63e-0410-b92d-a332b6c80bf9

--- a/trunk/build.xml
+++ b/trunk/build.xml
@@ -70,7 +70,8 @@
 
 		<!-- BINARY MAC VERSION -->
 		<zip destfile="${dist.dir}/${ant.project.name}-mac-${version}.zip">
-			<zipfileset dir="${parent.dir}" includes="${folder.name}/${ant.project.name}.app/**, ${folder.name}/help/**, ${folder.name}/licenses/**, ${folder.name}/readme.html, ${folder.name}/SuperCollider/**"/>
+			<zipfileset dir="${parent.dir}" includes="${folder.name}/${ant.project.name}.app/**, ${folder.name}/help/**, ${folder.name}/licenses/**, ${folder.name}/readme.html, ${folder.name}/SuperCollider/**" excludes="${folder.name}/${ant.project.name}.app/Contents/MacOS/${ant.project.name}"/>
+			<zipfileset dir="${parent.dir}" includes="${folder.name}/${ant.project.name}.app/Contents/MacOS/${ant.project.name}" filemode="775"/>
 		</zip>
 
 		<!-- BINARY WINDOWS VERSION -->
