--- a/trunk/Eisenkraut.app/Contents/Info.plist
+++ b/trunk/Eisenkraut.app/Contents/Info.plist
@@ -9,6 +9,22 @@
 		<dict>
 			<key>CFBundleTypeExtensions</key>
 			<array>
+				<string>w64</string>
+			</array>
+			<key>CFBundleTypeIconFile</key>
+			<string>w64.icns</string>
+			<key>CFBundleTypeName</key>
+			<string>Wave64 Audio File</string>
+			<key>CFBundleTypeOSTypes</key>
+			<array>
+				<string>W64 </string>
+			</array>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+		</dict>
+		<dict>
+			<key>CFBundleTypeExtensions</key>
+			<array>
 				<string>aif</string>
 				<string>aiff</string>
 				<string>aifc</string>
@@ -106,7 +122,7 @@
 	<key>CFBundleExecutable</key>
 	<string>Eisenkraut</string>
 	<key>CFBundleGetInfoString</key>
-	<string>Eisenkraut 0.70. Copyright © 2004-2008 by Hanns Holger Rutz. All rights reserved.</string>
+	<string>Eisenkraut 0.71. Copyright © 2004-2009 by Hanns Holger Rutz. All rights reserved.</string>
 	<key>CFBundleIconFile</key>
 	<string>application.icns</string>
 	<key>CFBundleIdentifier</key>
@@ -118,11 +134,11 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.70</string>
+	<string>0.71</string>
 	<key>CFBundleSignature</key>
 	<string>EisK</string>
 	<key>CFBundleVersion</key>
-	<string>0.70</string>
+	<string>0.71</string>
 	<key>Java</key>
 	<dict>
 		<key>ClassPath</key>
