quartz rendering is disabled by default on os x for java 1.6; reenabling it (looks really better)
git-svn-id: file:///tmp/Eisenkraut@154 72d441a5-a63e-0410-b92d-a332b6c80bf9

--- a/trunk/Eisenkraut.app/Contents/Info.plist
+++ b/trunk/Eisenkraut.app/Contents/Info.plist
@@ -151,6 +151,8 @@
 		<string>de.sciss.eisenkraut.Main</string>
 		<key>Properties</key>
 		<dict>
+			<key>apple.awt.graphics.UseQuartz</key>
+			<string>true</string>
 			<key>apple.laf.useScreenMenuBar</key>
 			<string>true</string>
 		</dict>
