prog-bar contrast; desktop uses script so we get correct cd for help files

--- a/Eisenkraut.desktop
+++ b/Eisenkraut.desktop
@@ -3,7 +3,7 @@ Name=Eisenkraut
 Version=1.0
 GenericName=Eisenkraut
 Comment=Eisenkraut Audio File Editor
-Exec=java -Xmx1024m -jar /home/hhrutz/Documents/devel/Eisenkraut/Eisenkraut.jar
+Exec=sh /home/hhrutz/Documents/devel/Eisenkraut/Eisenkraut.command
 StartupWMClass=de-sciss-eisenkraut-Main
 Icon=/home/hhrutz/Documents/devel/Eisenkraut/help/application.png
 Categories=Audio;AudioVideo;
