--- a/src/main/resources/EisenkrautStrings.properties
+++ b/src/main/resources/EisenkrautStrings.properties
@@ -15,7 +15,7 @@ menuClearRecent=Clear Menu
 menuClose=Close
 menuCloseAll=Close All
 menuImport=Import
-menuImportMarkers=Markers from Textfile...
+menuImportMarkers=Markers from Text File...
 menuSave=Save
 menuSaveAs=Save As...
 menuSaveCopyAs=Save a Copy As...
@@ -139,9 +139,9 @@ prefsAudioInputChannels=Ins
 prefsAudioOutputChannels=Outs
 prefsAudioDeviceActive=Active
 prefsAudioRate=Hardware Sample Rate:
-prefsAudioDevicesAssistent=Audio Devices Assistent
+prefsAudioDevicesAssistant=Audio Devices Assistant
 prefsAdvanced=Advanced
-prefsAudioBusses=Maximum Audio Busses:
+prefsAudioBuses=Maximum Audio Buses:
 prefsSCBlockSize=Audio Block Size:
 prefsSCMemSize=Realtime Memory [MB]:
 prefsSCRendezvous=Publish to Rendezvous:
@@ -152,8 +152,7 @@ prefsOSCProtocol=Protocol:
 prefsOSCPort=Port:
 prefsOSCSwingApp=SwingOSC Server (SwingOSC.jar):
 prefsView=View
-prefsSonaSettings=Default Sonagram Analysis
-editChangeTrackStructure=Change Track Structure
+prefsSonoSettings=Default Sonogram Analysis
 editSetTimelineLength=Set Timeline Length
 editSetTimelinePosition=Set Timeline Position
 editSetTimelineScroll=Set Timeline Scroll
@@ -175,7 +174,7 @@ buttonClose=Close
 buttonCancel=Cancel
 buttonDontSave=Don't Save
 buttonSave=Save
-buttonChoosePathTT=Click to Browse Your Harddisc
+buttonChoosePathTT=Click to Browse Your Hard-Disc
 buttonBack=Back
 buttonBoot=Boot
 buttonTerminate=Terminate
@@ -243,7 +242,7 @@ labelPosition=Position
 labelComment=Comment:
 labelUntitled=Untitled
 labelAudioIFs=Audio Interfaces:
-labelAssistent=Assistent...
+labelAssistant=Assistant...
 labelMinFreq=Lowest Frequency:
 labelMaxFreq=Highest Frequency:
 labelBandsPerOct=Bands per Octave:
@@ -267,7 +266,7 @@ scTerminated=scsynth terminated
 errMakeDir=Directory could not be created.
 errDeleteFile=File could not be deleted.
 errRenameFile=File could not be renamed.
-errMakeTmpFile=Temporary file could not be creatd.
+errMakeTmpFile=Temporary file could not be created.
 errBackupExists=A backup of the last saved version exists:
 errSavedTemp=The newly saved file has a temporary name:
 errLoadPrefs=Preferences couldn't be loaded.
@@ -276,7 +275,7 @@ errClipboard=Clipboard not accessible.
 errAudioFileType=Unknown audio file format.
 errAudioFileEncoding=Unsupported audio file encoding.
 errAudioFileIncomplete=Audio file information incomplete.
-errException=An error occured
+errException=An error occurred
 errOSCTimeOut=OSC Communication Timeout
 errOSCFailed=OSC Command Failed
 errOSCBuffer=OSC Buffer Overflow or Underflow
@@ -298,7 +297,6 @@ errKilledSC=scsynth didn't quit. we're killing it!
 errUnknownSCStatus=Cannot read scsynth status message
 errInitPlugIn=Initializing Plug-In
 errCleanUpPlugIn=Cleaning up Plug-In
-errOSCTimeOut=Timeout while trying to send OSC command
 errFilterNeedsClipboard=Filter requires clipboard contents
 errRecEmpty=Recording is empty
 errInvalidNumChannels=Invalid number of channels
@@ -308,13 +306,12 @@ errFileSelectionEmpty=No files have been selected
 errHeadersNotMatching=Audio file headers do not match (length, sample rate, encoding)
 errAudioWillLooseSync=Cannot process isolated audio channels
 errWindowNotFound=Window not found
-scErrNoBusses=Server ran out of Busses
+scErrNoBuses=Server ran out of Buses
 scErrNoBuffers=Server ran out of Buffers
 warnLookAndFeelUpdate=For Look-and-Feel changes to take effect,\nthe application must be restarted.
 warnFileExists=The file already exists
 warnOverwriteFile=Do you want to overwrite the file?
 warnWriteProtected=The document or its folder is write protected.\nEdits can only be saved in a new location!
 renderEarlyConsume=Premature render consumer call
-copyright=Copyright (c) 2004-2014 Hanns Holger Rutz
-appURL=http://www.sciss.de/eisenkraut/
+copyright=Copyright (c) 2004-2015 Hanns Holger Rutz
 credits=<P><STRONG>This is a beta version!</STRONG> This software is licensed under the <A HREF="http://www.gnu.org/copyleft/gpl.html">GNU General Public License</A> and comes with absolutely no warranty or liability! All software provided "as is". For project status visit <A HREF="http://www.sourceforge.net/projects/eisenkraut/">www.sourceforge.net/projects/eisenkraut</A>.</P><P>To run this software properly, you must install SuperCollider which is a free software available from <A HREF="http://www.sourceforge.net/projects/supercollider/">www.sourceforge.net/projects/supercollider</A>.</P><P><A HREF=\"http://homepage.mac.com/sroy/mrjadapter/\">MRJAdapter</A> Copyright (c) 2007 Steve Roy (licensed under the <A HREF="http://homepage.mac.com/sroy/artisticlicense.html">Artistic License</A>).</P>
