--- a/src/main/resources/EisenkrautStrings.properties
+++ b/src/main/resources/EisenkrautStrings.properties
@@ -52,8 +52,10 @@ menuHelp=Help
 menuHelpManual=Eisenkraut Help
 menuHelpShortcuts=Keyboard Shortcuts
 menuHelpWebsite=Open Eisenkraut Website
-menuFadeIn=Fade In \u2325...
-menuFadeOut=Fade Out \u2325...
+menuFadeIn=Fade In
+menuFadeInD=Fade In (Settings)...
+menuFadeOut=Fade Out
+menuFadeOutD=Fade Out (Settings)...
 menuGain=Gain...
 menuInvert=Invert
 menuMix=Mix...
