--- a/src/main/resources/EisenkrautStrings.properties
+++ b/src/main/resources/EisenkrautStrings.properties
@@ -120,6 +120,9 @@ prefsCache=Cache Waveform Overview:
 prefsCacheActive=Active
 prefsCacheCapacity=Capacity:
 prefsCacheFolder=Cache Folder:
+prefsRevealCmd=Reveal File Command:
+ttAudioInfo=Show Audio Header Information
+ttRevealFile=Reveal File in Desktop Manager
 prefsRecallFrames=Recall Windows from Session
 prefsLookAndFeel=Look-and-Feel:
 prefsLAFDecoration=Look-and-Feel Window Decoration
