--- a/src/main/resources/EisenkrautStrings.properties
+++ b/src/main/resources/EisenkrautStrings.properties
@@ -123,6 +123,13 @@ prefsCacheFolder=Cache Folder:
 prefsRevealCmd=Reveal File Command:
 ttAudioInfo=Show Audio Header Information
 ttRevealFile=Reveal File in Desktop Manager
+ttTimelineCatch=Scroll With Playback Head
+ttTimelineMode1=Insert Mode
+ttTimelineMode2=Overwrite Mode
+ttTimelineMode3=Mix Mode
+ttTimelinePointer=Pointer Tool
+ttTimelineZoom=Zoom Tool
+ttTimelineBlending=Blending (Cross-Fade)
 prefsRecallFrames=Recall Windows from Session
 prefsLookAndFeel=Look-and-Feel:
 prefsLAFDecoration=Look-and-Feel Window Decoration
@@ -201,6 +208,7 @@ buttonExpStatsTT=Hide Extra Stats
 buttonCollStatsTT=Show Extra Stats
 buttonSetCurrent=\u2193 Current
 buttonDragRegion=Region
+ttDragRegion=Drag Selected Region as Text String
 buttonKeepFile=Keep File
 buttonDeleteFile=Delete File
 helpOpenBrowser=Open in Browser
