record prints start time to console

--- a/src/debian/Eisenkraut.desktop
+++ b/src/debian/Eisenkraut.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Name=Eisenkraut
-Version=1.4.1
+Version=1.4.2-SNAPSHOT
 GenericName=Eisenkraut
 Comment=Eisenkraut Audio File Editor
 Exec=/usr/share/eisenkraut/bin/eisenkraut %F
